# Zlin_NVIDIA_programming_homeworks

./: README.md
Add_2_vectors/: README_CZ  main.cu
Image processing with 2D convolution./: CMakeLists.txt  README_CZ  main (1).cu
Multiplication_of_2_matrixes_in_global_memmory/: CMakeLists.txt  README_CZ  main.cu  matrix1.txt  matrix2.txt
